@@ -24,9 +24,11 @@ static char *cgdb_help_text[] = {
 "    right arrow -> right a line.",
 "    l           -> right a line.",
 "    page up     -> up a page",
-"    shift j     -> up a page",
+"    ^b          -> up a page",
+"    ^u          -> up 1/2 a page",
 "    page down   -> down a page",
-"    shift k     -> down a page",
+"	^f          -> down a page",
+"	^d          -> down 1/2 a page",
 "    gg          -> top of file",
 "    G           -> bottom of file",
 "    /           -> search",
