@@ -26,6 +26,34 @@ enum cgdb_input_macro {
     CGDB_KEY_F11,
     CGDB_KEY_F12,
 
+	/* Ctrl Keys */
+	CGDB_KEY_CTRL_A,
+	CGDB_KEY_CTRL_B,
+	CGDB_KEY_CTRL_C,
+	CGDB_KEY_CTRL_D,
+	CGDB_KEY_CTRL_E,
+	CGDB_KEY_CTRL_F,
+	CGDB_KEY_CTRL_G,
+	CGDB_KEY_CTRL_H,
+	CGDB_KEY_CTRL_I,
+	CGDB_KEY_CTRL_J,
+	CGDB_KEY_CTRL_K,
+	CGDB_KEY_CTRL_L,
+	CGDB_KEY_CTRL_M,
+	CGDB_KEY_CTRL_N,
+	CGDB_KEY_CTRL_O,
+	CGDB_KEY_CTRL_P,
+	CGDB_KEY_CTRL_Q,
+	CGDB_KEY_CTRL_R,
+	CGDB_KEY_CTRL_S,
+	CGDB_KEY_CTRL_T,
+	CGDB_KEY_CTRL_U,
+	CGDB_KEY_CTRL_V,
+	CGDB_KEY_CTRL_W,
+	CGDB_KEY_CTRL_X,
+	CGDB_KEY_CTRL_Y,
+	CGDB_KEY_CTRL_Z,
+
     /* Alt Letters */
     CGDB_KEY_ALT_A,
     CGDB_KEY_ALT_B,
